--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "@fortawesome/fontawesome-free": "^5.15.2",
         "autoprefixer": "^10.2.1",
         "framer-motion": "^3.2.1",
         "next": "10.0.5",
         "postcss": "^8.2.4",
-        "react": "17.0.1",
-        "react-dom": "17.0.1",
+        "react": "next",
+        "react-dom": "next",
         "tailwindcss": "^2.0.2"
     }
 }
