--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "animejs": "^3.2.1",
         "autoprefixer": "^10.2.1",
         "framer-motion": "^3.2.1",
         "next": "10.0.5",
