--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "animejs": "^3.2.1",
         "autoprefixer": "^10.2.1",
         "framer-motion": "^3.2.1",
-        "next": "10.0.5",
+        "next": "^10.0.8",
         "nookies": "^2.5.2",
         "postcss": "^8.2.4",
         "react": "next",
