--- a/package.json
+++ b/package.json
@@ -8,15 +8,18 @@
         "start": "node server.js"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.3",
         "animejs": "^3.2.1",
         "autoprefixer": "^10.2.1",
         "framer-motion": "^3.2.1",
         "next": "^10.0.8",
+        "node-fetch": "^2.6.1",
         "nookies": "^2.5.2",
         "postcss": "^8.2.4",
         "react": "next",
         "react-confetti": "^6.0.1",
         "react-dom": "next",
-        "tailwindcss": "^2.0.2"
+        "tailwindcss": "^2.0.2",
+        "typewriter-effect": "^2.17.0"
     }
 }
