--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     },
     "dependencies": {
         "@material-ui/core": "^4.11.3",
-        "animejs": "^3.2.1",
         "autoprefixer": "^10.2.1",
         "framer-motion": "^3.2.1",
         "next": "^10.0.8",
@@ -19,7 +18,6 @@
         "react": "next",
         "react-confetti": "^6.0.1",
         "react-dom": "next",
-        "tailwindcss": "^2.0.2",
-        "typewriter-effect": "^2.17.0"
+        "tailwindcss": "^2.0.2"
     }
 }
