--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "@material-ui/core": "^4.11.3",
+        "animejs": "^3.2.1",
         "autoprefixer": "^10.2.1",
         "framer-motion": "^3.2.1",
         "next": "^10.0.8",
