--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dependencies": {
         "@material-ui/core": "^4.11.3",
         "animejs": "^3.2.1",
+        "apexcharts": "^3.26.1",
         "autoprefixer": "^10.2.1",
         "framer-motion": "^3.2.1",
         "next": "^10.0.8",
@@ -17,8 +18,10 @@
         "nookies": "^2.5.2",
         "postcss": "^8.2.4",
         "react": "next",
+        "react-apexcharts": "^1.3.9",
         "react-confetti": "^6.0.1",
         "react-dom": "next",
+        "recharts": "^2.0.9",
         "tailwindcss": "^2.0.2"
     }
 }
